--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  color: #707070;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
